Ruff format and workflow fix

--- a/run_example/lstm-model-with-item-infor-fix-missing-last-item.ipynb
+++ b/run_example/lstm-model-with-item-infor-fix-missing-last-item.ipynb
@@ -430,7 +430,10 @@
    "source": [
     "import pandas as pd\n",
     "import gc\n",
-    "df = pd.read_csv(r\"/kaggle/input/h-and-m-personalized-fashion-recommendations/articles.csv\", dtype={'article_id': 'str'})\n",
+    "\n",
+    "df = pd.read_csv(\n",
+    "    r\"/kaggle/input/h-and-m-personalized-fashion-recommendations/articles.csv\", dtype={\"article_id\": \"str\"}\n",
+    ")\n",
     "df.head()"
    ]
   },
@@ -728,9 +731,22 @@
     }
    ],
    "source": [
-    "df = df.drop(columns = ['product_type_name', 'graphical_appearance_name', 'colour_group_name', 'perceived_colour_value_name',\n",
-    "                        'perceived_colour_master_name', 'index_name', 'index_group_name', 'section_name', \n",
-    "                        'garment_group_name', 'prod_name', 'department_name', 'detail_desc'])\n",
+    "df = df.drop(\n",
+    "    columns=[\n",
+    "        \"product_type_name\",\n",
+    "        \"graphical_appearance_name\",\n",
+    "        \"colour_group_name\",\n",
+    "        \"perceived_colour_value_name\",\n",
+    "        \"perceived_colour_master_name\",\n",
+    "        \"index_name\",\n",
+    "        \"index_group_name\",\n",
+    "        \"section_name\",\n",
+    "        \"garment_group_name\",\n",
+    "        \"prod_name\",\n",
+    "        \"department_name\",\n",
+    "        \"detail_desc\",\n",
+    "    ]\n",
+    ")\n",
     "df.head()"
    ]
   },
@@ -921,12 +937,22 @@
    ],
    "source": [
     "temp = df.rename(\n",
-    "    columns={'article_id': 'item_id:token', 'product_code': 'product_code:token', 'product_type_no': 'product_type_no:float',\n",
-    "             'product_group_name': 'product_group_name:token_seq', 'graphical_appearance_no': 'graphical_appearance_no:token', \n",
-    "             'colour_group_code': 'colour_group_code:token', 'perceived_colour_value_id': 'perceived_colour_value_id:token', \n",
-    "             'perceived_colour_master_id': 'perceived_colour_master_id:token', 'department_no': 'department_no:token', \n",
-    "             'index_code': 'index_code:token', 'index_group_no': 'index_group_no:token', 'section_no': 'section_no:token', \n",
-    "             'garment_group_no': 'garment_group_no:token'})\n",
+    "    columns={\n",
+    "        \"article_id\": \"item_id:token\",\n",
+    "        \"product_code\": \"product_code:token\",\n",
+    "        \"product_type_no\": \"product_type_no:float\",\n",
+    "        \"product_group_name\": \"product_group_name:token_seq\",\n",
+    "        \"graphical_appearance_no\": \"graphical_appearance_no:token\",\n",
+    "        \"colour_group_code\": \"colour_group_code:token\",\n",
+    "        \"perceived_colour_value_id\": \"perceived_colour_value_id:token\",\n",
+    "        \"perceived_colour_master_id\": \"perceived_colour_master_id:token\",\n",
+    "        \"department_no\": \"department_no:token\",\n",
+    "        \"index_code\": \"index_code:token\",\n",
+    "        \"index_group_no\": \"index_group_no:token\",\n",
+    "        \"section_no\": \"section_no:token\",\n",
+    "        \"garment_group_no\": \"garment_group_no:token\",\n",
+    "    }\n",
+    ")\n",
     "temp.head()"
    ]
   },
@@ -954,7 +980,7 @@
    "outputs": [],
    "source": [
     "!mkdir /kaggle/working/recbox_data\n",
-    "temp.to_csv(r'/kaggle/working/recbox_data/recbox_data.item', index=False, sep='\\t')"
+    "temp.to_csv(r\"/kaggle/working/recbox_data/recbox_data.item\", index=False, sep=\"\\t\")"
    ]
   },
   {
@@ -1092,8 +1118,9 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(r\"/kaggle/input/h-and-m-personalized-fashion-recommendations/transactions_train.csv\", \n",
-    "                 dtype={'article_id': 'str'})\n",
+    "df = pd.read_csv(\n",
+    "    r\"/kaggle/input/h-and-m-personalized-fashion-recommendations/transactions_train.csv\", dtype={\"article_id\": \"str\"}\n",
+    ")\n",
     "df.head()"
    ]
   },
@@ -1277,7 +1304,7 @@
     }
    ],
    "source": [
-    "df['t_dat'] = pd.to_datetime(df['t_dat'], format=\"%Y-%m-%d\")\n",
+    "df[\"t_dat\"] = pd.to_datetime(df[\"t_dat\"], format=\"%Y-%m-%d\")\n",
     "df"
    ]
   },
@@ -1405,7 +1432,8 @@
    ],
    "source": [
     "import numpy as np\n",
-    "df['timestamp'] = df.t_dat.values.astype(np.int64) // 10 ** 9\n",
+    "\n",
+    "df[\"timestamp\"] = df.t_dat.values.astype(np.int64) // 10**9\n",
     "df.head()"
    ]
   },
@@ -1588,8 +1616,9 @@
     }
    ],
    "source": [
-    "temp = df[df['timestamp'] > 1585620000][['customer_id', 'article_id', 'timestamp']].rename(\n",
-    "    columns={'customer_id': 'user_id:token', 'article_id': 'item_id:token', 'timestamp': 'timestamp:float'})\n",
+    "temp = df[df[\"timestamp\"] > 1585620000][[\"customer_id\", \"article_id\", \"timestamp\"]].rename(\n",
+    "    columns={\"customer_id\": \"user_id:token\", \"article_id\": \"item_id:token\", \"timestamp\": \"timestamp:float\"}\n",
+    ")\n",
     "temp"
    ]
   },
@@ -1644,7 +1673,7 @@
     }
    ],
    "source": [
-    "temp.to_csv('/kaggle/working/recbox_data/recbox_data.inter', index=False, sep='\\t')\n",
+    "temp.to_csv(\"/kaggle/working/recbox_data/recbox_data.inter\", index=False, sep=\"\\t\")\n",
     "del temp\n",
     "gc.collect()"
    ]
@@ -1729,9 +1758,21 @@
     }
    ],
    "source": [
-    "sub0 = pd.read_csv('../input/hm-pre-recommendation/submissio_byfone_chris.csv').sort_values('customer_id').reset_index(drop=True)\n",
-    "sub1 = pd.read_csv('../input/hm-pre-recommendation/submission_trending.csv').sort_values('customer_id').reset_index(drop=True)\n",
-    "sub2 = pd.read_csv('../input/hm-pre-recommendation/submission_exponential_decay.csv').sort_values('customer_id').reset_index(drop=True)\n",
+    "sub0 = (\n",
+    "    pd.read_csv(\"../input/hm-pre-recommendation/submissio_byfone_chris.csv\")\n",
+    "    .sort_values(\"customer_id\")\n",
+    "    .reset_index(drop=True)\n",
+    ")\n",
+    "sub1 = (\n",
+    "    pd.read_csv(\"../input/hm-pre-recommendation/submission_trending.csv\")\n",
+    "    .sort_values(\"customer_id\")\n",
+    "    .reset_index(drop=True)\n",
+    ")\n",
+    "sub2 = (\n",
+    "    pd.read_csv(\"../input/hm-pre-recommendation/submission_exponential_decay.csv\")\n",
+    "    .sort_values(\"customer_id\")\n",
+    "    .reset_index(drop=True)\n",
+    ")\n",
     "\n",
     "sub0.shape, sub1.shape, sub2.shape"
    ]
@@ -1861,9 +1902,9 @@
     }
    ],
    "source": [
-    "sub0.columns = ['customer_id', 'prediction0']\n",
-    "sub0['prediction1'] = sub1['prediction']\n",
-    "sub0['prediction2'] = sub2['prediction']\n",
+    "sub0.columns = [\"customer_id\", \"prediction0\"]\n",
+    "sub0[\"prediction1\"] = sub1[\"prediction\"]\n",
+    "sub0[\"prediction2\"] = sub2[\"prediction\"]\n",
     "del sub1, sub2\n",
     "gc.collect()\n",
     "sub0.head()"
@@ -2007,33 +2048,34 @@
     }
    ],
    "source": [
-    "def cust_blend(dt, W = [1,1,1]):\n",
-    "    #Global ensemble weights\n",
-    "    #W = [1.15,0.95,0.85]\n",
-    "    \n",
-    "    #Create a list of all model predictions\n",
+    "def cust_blend(dt, W=[1, 1, 1]):\n",
+    "    # Global ensemble weights\n",
+    "    # W = [1.15,0.95,0.85]\n",
+    "\n",
+    "    # Create a list of all model predictions\n",
     "    REC = []\n",
-    "    REC.append(dt['prediction0'].split())\n",
-    "    REC.append(dt['prediction1'].split())\n",
-    "    REC.append(dt['prediction2'].split())\n",
-    "    \n",
-    "    #Create a dictionary of items recommended. \n",
-    "    #Assign a weight according the order of appearance and multiply by global weights\n",
+    "    REC.append(dt[\"prediction0\"].split())\n",
+    "    REC.append(dt[\"prediction1\"].split())\n",
+    "    REC.append(dt[\"prediction2\"].split())\n",
+    "\n",
+    "    # Create a dictionary of items recommended.\n",
+    "    # Assign a weight according the order of appearance and multiply by global weights\n",
     "    res = {}\n",
     "    for M in range(len(REC)):\n",
     "        for n, v in enumerate(REC[M]):\n",
     "            if v in res:\n",
-    "                res[v] += (W[M]/(n+1))\n",
+    "                res[v] += W[M] / (n + 1)\n",
     "            else:\n",
-    "                res[v] = (W[M]/(n+1))\n",
-    "    \n",
+    "                res[v] = W[M] / (n + 1)\n",
+    "\n",
     "    # Sort dictionary by item weights\n",
     "    res = list(dict(sorted(res.items(), key=lambda item: -item[1])).keys())\n",
-    "    \n",
-    "    # Return the top 12 itens only\n",
-    "    return ' '.join(res[:12])\n",
     "\n",
-    "sub0['prediction'] = sub0.apply(cust_blend, W = [1.05,1.00,0.95], axis=1)\n",
+    "    # Return the top 12 itens only\n",
+    "    return \" \".join(res[:12])\n",
+    "\n",
+    "\n",
+    "sub0[\"prediction\"] = sub0.apply(cust_blend, W=[1.05, 1.00, 0.95], axis=1)\n",
     "sub0.head()"
    ]
   },
@@ -2060,11 +2102,11 @@
    },
    "outputs": [],
    "source": [
-    "del sub0['prediction0']\n",
-    "del sub0['prediction1']\n",
-    "del sub0['prediction2']\n",
+    "del sub0[\"prediction0\"]\n",
+    "del sub0[\"prediction1\"]\n",
+    "del sub0[\"prediction2\"]\n",
     "gc.collect()\n",
-    "sub0.to_csv(f'submission.csv', index=False)"
+    "sub0.to_csv(f\"submission.csv\", index=False)"
    ]
   },
   {
@@ -2300,33 +2342,53 @@
    ],
    "source": [
     "parameter_dict = {\n",
-    "    'data_path': '/kaggle/working',\n",
-    "    'USER_ID_FIELD': 'user_id',\n",
-    "    'ITEM_ID_FIELD': 'item_id',\n",
-    "    'TIME_FIELD': 'timestamp',\n",
-    "    'user_inter_num_interval': \"[40,inf)\",\n",
-    "    'item_inter_num_interval': \"[40,inf)\",\n",
-    "    'load_col': {'inter': ['user_id', 'item_id', 'timestamp'],\n",
-    "                 'item': ['item_id', 'product_code', 'product_type_no', 'product_group_name', 'graphical_appearance_no',\n",
-    "                      'colour_group_code', 'perceived_colour_value_id', 'perceived_colour_master_id',\n",
-    "                      'department_no', 'index_code', 'index_group_no', 'section_no', 'garment_group_no']\n",
-    "             },\n",
-    "    'selected_features': ['product_code', 'product_type_no', 'product_group_name', 'graphical_appearance_no',\n",
-    "                          'colour_group_code', 'perceived_colour_value_id', 'perceived_colour_master_id',\n",
-    "                          'department_no', 'index_code', 'index_group_no', 'section_no', 'garment_group_no'],\n",
-    "    'neg_sampling': None,\n",
-    "    'epochs': 30,\n",
-    "    'eval_args': {\n",
-    "        'split': {'RS': [10, 0, 0]},\n",
-    "        'group_by': 'user',\n",
-    "        'order': 'TO',\n",
-    "        'mode': 'full'}\n",
+    "    \"data_path\": \"/kaggle/working\",\n",
+    "    \"USER_ID_FIELD\": \"user_id\",\n",
+    "    \"ITEM_ID_FIELD\": \"item_id\",\n",
+    "    \"TIME_FIELD\": \"timestamp\",\n",
+    "    \"user_inter_num_interval\": \"[40,inf)\",\n",
+    "    \"item_inter_num_interval\": \"[40,inf)\",\n",
+    "    \"load_col\": {\n",
+    "        \"inter\": [\"user_id\", \"item_id\", \"timestamp\"],\n",
+    "        \"item\": [\n",
+    "            \"item_id\",\n",
+    "            \"product_code\",\n",
+    "            \"product_type_no\",\n",
+    "            \"product_group_name\",\n",
+    "            \"graphical_appearance_no\",\n",
+    "            \"colour_group_code\",\n",
+    "            \"perceived_colour_value_id\",\n",
+    "            \"perceived_colour_master_id\",\n",
+    "            \"department_no\",\n",
+    "            \"index_code\",\n",
+    "            \"index_group_no\",\n",
+    "            \"section_no\",\n",
+    "            \"garment_group_no\",\n",
+    "        ],\n",
+    "    },\n",
+    "    \"selected_features\": [\n",
+    "        \"product_code\",\n",
+    "        \"product_type_no\",\n",
+    "        \"product_group_name\",\n",
+    "        \"graphical_appearance_no\",\n",
+    "        \"colour_group_code\",\n",
+    "        \"perceived_colour_value_id\",\n",
+    "        \"perceived_colour_master_id\",\n",
+    "        \"department_no\",\n",
+    "        \"index_code\",\n",
+    "        \"index_group_no\",\n",
+    "        \"section_no\",\n",
+    "        \"garment_group_no\",\n",
+    "    ],\n",
+    "    \"neg_sampling\": None,\n",
+    "    \"epochs\": 30,\n",
+    "    \"eval_args\": {\"split\": {\"RS\": [10, 0, 0]}, \"group_by\": \"user\", \"order\": \"TO\", \"mode\": \"full\"},\n",
     "}\n",
     "\n",
-    "config = Config(model='GRU4RecF', dataset='recbox_data', config_dict=parameter_dict)\n",
+    "config = Config(model=\"GRU4RecF\", dataset=\"recbox_data\", config_dict=parameter_dict)\n",
     "\n",
     "# init random seed\n",
-    "init_seed(config['seed'], config['reproducibility'])\n",
+    "init_seed(config[\"seed\"], config[\"reproducibility\"])\n",
     "\n",
     "# logger initialization\n",
     "init_logger(config)\n",
@@ -2534,7 +2596,7 @@
    ],
    "source": [
     "# model loading and initialization\n",
-    "model = GRU4RecF(config, train_data.dataset).to(config['device'])\n",
+    "model = GRU4RecF(config, train_data.dataset).to(config[\"device\"])\n",
     "logger.info(model)\n",
     "\n",
     "# trainer loading and initialization\n",
@@ -2587,8 +2649,10 @@
    "outputs": [],
    "source": [
     "from recbole.utils.case_study import full_sort_topk\n",
-    "external_user_ids = dataset.id2token(\n",
-    "    dataset.uid_field, list(range(dataset.user_num)))[1:]#fist element in array is 'PAD'(default of Recbole) ->remove it "
+    "\n",
+    "external_user_ids = dataset.id2token(dataset.uid_field, list(range(dataset.user_num)))[\n",
+    "    1:\n",
+    "]  # fist element in array is 'PAD'(default of Recbole) ->remove it"
    ]
   },
   {
@@ -2617,14 +2681,16 @@
     "import torch\n",
     "from recbole.data.interaction import Interaction\n",
     "\n",
+    "\n",
     "def add_last_item(old_interaction, last_item_id, max_len=50):\n",
-    "    new_seq_items = old_interaction['item_id_list'][-1]\n",
-    "    if old_interaction['item_length'][-1].item() < max_len:\n",
-    "        new_seq_items[old_interaction['item_length'][-1].item()] = last_item_id\n",
+    "    new_seq_items = old_interaction[\"item_id_list\"][-1]\n",
+    "    if old_interaction[\"item_length\"][-1].item() < max_len:\n",
+    "        new_seq_items[old_interaction[\"item_length\"][-1].item()] = last_item_id\n",
     "    else:\n",
     "        new_seq_items = torch.roll(new_seq_items, -1)\n",
     "        new_seq_items[-1] = last_item_id\n",
     "    return new_seq_items.view(1, len(new_seq_items))\n",
+    "\n",
     "\n",
     "def predict_for_all_item(external_user_id, dataset, model):\n",
     "    model.eval()\n",
@@ -2633,14 +2699,19 @@
     "        index = np.isin(dataset.inter_feat[dataset.uid_field].numpy(), uid_series)\n",
     "        input_interaction = dataset[index]\n",
     "        test = {\n",
-    "            'item_id_list': add_last_item(input_interaction, \n",
-    "                                          input_interaction['item_id'][-1].item(), model.max_seq_length),\n",
-    "            'item_length': torch.tensor(\n",
-    "                [input_interaction['item_length'][-1].item() + 1\n",
-    "                 if input_interaction['item_length'][-1].item() < model.max_seq_length else model.max_seq_length])\n",
+    "            \"item_id_list\": add_last_item(\n",
+    "                input_interaction, input_interaction[\"item_id\"][-1].item(), model.max_seq_length\n",
+    "            ),\n",
+    "            \"item_length\": torch.tensor(\n",
+    "                [\n",
+    "                    input_interaction[\"item_length\"][-1].item() + 1\n",
+    "                    if input_interaction[\"item_length\"][-1].item() < model.max_seq_length\n",
+    "                    else model.max_seq_length\n",
+    "                ]\n",
+    "            ),\n",
     "        }\n",
     "        new_inter = Interaction(test)\n",
-    "        new_inter = new_inter.to(config['device'])\n",
+    "        new_inter = new_inter.to(config[\"device\"])\n",
     "        new_scores = model.full_sort_predict(new_inter)\n",
     "        new_scores = new_scores.view(-1, test_data.dataset.item_num)\n",
     "        new_scores[:, 0] = -np.inf  # set scores of [pad] to -inf\n",
@@ -2685,8 +2756,7 @@
     }
    ],
    "source": [
-    "predict_for_all_item('0109ad0b5a76924a1b58be677409bb601cc8bead9a87b8ce5b08a4a1f5bc71ef', \n",
-    "                     dataset, model)"
+    "predict_for_all_item(\"0109ad0b5a76924a1b58be677409bb601cc8bead9a87b8ce5b08a4a1f5bc71ef\", dataset, model)"
    ]
   },
   {
@@ -2828,9 +2898,9 @@
     }
    ],
    "source": [
-    "external_item_str = [' '.join(x) for x in topk_items]\n",
-    "result = pd.DataFrame(external_user_ids, columns=['customer_id'])\n",
-    "result['prediction'] = external_item_str\n",
+    "external_item_str = [\" \".join(x) for x in topk_items]\n",
+    "result = pd.DataFrame(external_user_ids, columns=[\"customer_id\"])\n",
+    "result[\"prediction\"] = external_item_str\n",
     "result.head()"
    ]
   },
@@ -2932,7 +3002,7 @@
     }
    ],
    "source": [
-    "submit_df = pd.read_csv('submission.csv')\n",
+    "submit_df = pd.read_csv(\"submission.csv\")\n",
     "submit_df.shape"
    ]
   },
@@ -3143,7 +3213,7 @@
     }
    ],
    "source": [
-    "submit_df = pd.merge(submit_df, result, on='customer_id', how='outer')\n",
+    "submit_df = pd.merge(submit_df, result, on=\"customer_id\", how=\"outer\")\n",
     "submit_df.head()"
    ]
   },
@@ -3266,8 +3336,9 @@
    ],
    "source": [
     "submit_df = submit_df.fillna(-1)\n",
-    "submit_df['prediction'] = submit_df.apply(\n",
-    "    lambda x: x['prediction_y'] if x['prediction_y'] != -1 else x['prediction_x'], axis=1)\n",
+    "submit_df[\"prediction\"] = submit_df.apply(\n",
+    "    lambda x: x[\"prediction_y\"] if x[\"prediction_y\"] != -1 else x[\"prediction_x\"], axis=1\n",
+    ")\n",
     "submit_df.head()"
    ]
   },
@@ -3370,7 +3441,7 @@
     }
    ],
    "source": [
-    "submit_df = submit_df.drop(columns=['prediction_y', 'prediction_x'])\n",
+    "submit_df = submit_df.drop(columns=[\"prediction_y\", \"prediction_x\"])\n",
     "submit_df.head()"
    ]
   },
@@ -3397,7 +3468,7 @@
    },
    "outputs": [],
    "source": [
-    "submit_df.to_csv('submission.csv', index=False)"
+    "submit_df.to_csv(\"submission.csv\", index=False)"
    ]
   },
   {
