--- a/run_example/recbole-using-all-items-for-prediction.ipynb
+++ b/run_example/recbole-using-all-items-for-prediction.ipynb
@@ -296,8 +296,10 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "df = pd.read_csv(r\"/kaggle/input/h-and-m-personalized-fashion-recommendations/transactions_train.csv\", \n",
-    "                 dtype={'article_id': 'str'})\n",
+    "\n",
+    "df = pd.read_csv(\n",
+    "    r\"/kaggle/input/h-and-m-personalized-fashion-recommendations/transactions_train.csv\", dtype={\"article_id\": \"str\"}\n",
+    ")\n",
     "df.head()"
    ]
   },
@@ -425,8 +427,9 @@
    ],
    "source": [
     "import numpy as np\n",
-    "df['t_dat'] = pd.to_datetime(df['t_dat'], format=\"%Y-%m-%d\")\n",
-    "df['timestamp'] = df.t_dat.values.astype(np.int64) // 10 ** 9\n",
+    "\n",
+    "df[\"t_dat\"] = pd.to_datetime(df[\"t_dat\"], format=\"%Y-%m-%d\")\n",
+    "df[\"timestamp\"] = df.t_dat.values.astype(np.int64) // 10**9\n",
     "df.head()"
    ]
   },
@@ -586,8 +589,9 @@
     }
    ],
    "source": [
-    "temp = df[df['timestamp'] > 1585620000][['customer_id', 'article_id', 'timestamp']].rename(\n",
-    "    columns={'customer_id': 'user_id:token', 'article_id': 'item_id:token', 'timestamp': 'timestamp:float'})\n",
+    "temp = df[df[\"timestamp\"] > 1585620000][[\"customer_id\", \"article_id\", \"timestamp\"]].rename(\n",
+    "    columns={\"customer_id\": \"user_id:token\", \"article_id\": \"item_id:token\", \"timestamp\": \"timestamp:float\"}\n",
+    ")\n",
     "temp"
    ]
   },
@@ -633,7 +637,7 @@
    "outputs": [],
    "source": [
     "!mkdir /kaggle/working/recbox_data\n",
-    "temp.to_csv('/kaggle/working/recbox_data/recbox_data.inter', index=False, sep='\\t')"
+    "temp.to_csv(\"/kaggle/working/recbox_data/recbox_data.inter\", index=False, sep=\"\\t\")"
    ]
   },
   {
@@ -671,6 +675,7 @@
    ],
    "source": [
     "import gc\n",
+    "\n",
     "del temp\n",
     "gc.collect()"
    ]
@@ -731,25 +736,21 @@
    "outputs": [],
    "source": [
     "parameter_dict = {\n",
-    "    'data_path': '/kaggle/working',\n",
-    "    'USER_ID_FIELD': 'user_id',\n",
-    "    'ITEM_ID_FIELD': 'item_id',\n",
-    "    'TIME_FIELD': 'timestamp',\n",
-    "    'user_inter_num_interval': \"[40,inf)\",\n",
-    "    'item_inter_num_interval': \"[40,inf)\",\n",
-    "    'load_col': {'inter': ['user_id', 'item_id', 'timestamp']},\n",
-    "    'neg_sampling': None,\n",
-    "    'epochs': 2,\n",
-    "    'eval_args': {\n",
-    "        'split': {'RS': [9, 0, 1]},\n",
-    "        'group_by': 'user',\n",
-    "        'order': 'TO',\n",
-    "        'mode': 'full'}\n",
+    "    \"data_path\": \"/kaggle/working\",\n",
+    "    \"USER_ID_FIELD\": \"user_id\",\n",
+    "    \"ITEM_ID_FIELD\": \"item_id\",\n",
+    "    \"TIME_FIELD\": \"timestamp\",\n",
+    "    \"user_inter_num_interval\": \"[40,inf)\",\n",
+    "    \"item_inter_num_interval\": \"[40,inf)\",\n",
+    "    \"load_col\": {\"inter\": [\"user_id\", \"item_id\", \"timestamp\"]},\n",
+    "    \"neg_sampling\": None,\n",
+    "    \"epochs\": 2,\n",
+    "    \"eval_args\": {\"split\": {\"RS\": [9, 0, 1]}, \"group_by\": \"user\", \"order\": \"TO\", \"mode\": \"full\"},\n",
     "}\n",
-    "config = Config(model='GRU4Rec', dataset='recbox_data', config_dict=parameter_dict)\n",
+    "config = Config(model=\"GRU4Rec\", dataset=\"recbox_data\", config_dict=parameter_dict)\n",
     "\n",
     "# init random seed\n",
-    "init_seed(config['seed'], config['reproducibility'])\n",
+    "init_seed(config[\"seed\"], config[\"reproducibility\"])\n",
     "\n",
     "# logger initialization\n",
     "init_logger(config)\n",
@@ -1059,9 +1060,10 @@
     }
    ],
    "source": [
-    "last_item_ids = df[df.customer_id == '0109ad0b5a76924a1b58be677409bb601cc8bead9a87b8ce5b08a4a1f5bc71ef'\n",
-    "                  ].tail(10).article_id.values\n",
-    "df[df.customer_id == '0109ad0b5a76924a1b58be677409bb601cc8bead9a87b8ce5b08a4a1f5bc71ef'].tail(10)"
+    "last_item_ids = (\n",
+    "    df[df.customer_id == \"0109ad0b5a76924a1b58be677409bb601cc8bead9a87b8ce5b08a4a1f5bc71ef\"].tail(10).article_id.values\n",
+    ")\n",
+    "df[df.customer_id == \"0109ad0b5a76924a1b58be677409bb601cc8bead9a87b8ce5b08a4a1f5bc71ef\"].tail(10)"
    ]
   },
   {
@@ -1157,8 +1159,9 @@
     }
    ],
    "source": [
-    "test_data.dataset.token2id(test_data.dataset.uid_field, \n",
-    "                           '0109ad0b5a76924a1b58be677409bb601cc8bead9a87b8ce5b08a4a1f5bc71ef')"
+    "test_data.dataset.token2id(\n",
+    "    test_data.dataset.uid_field, \"0109ad0b5a76924a1b58be677409bb601cc8bead9a87b8ce5b08a4a1f5bc71ef\"\n",
+    ")"
    ]
   },
   {
@@ -1311,7 +1314,7 @@
     }
    ],
    "source": [
-    "print(\"test label: \" + str(input_features['item_id']))\n",
+    "print(\"test label: \" + str(input_features[\"item_id\"]))\n",
     "print(\"last 10 items from origin dataset: \" + str(dataset.token2id(dataset.iid_field, last_item_ids)))"
    ]
   },
@@ -1398,7 +1401,7 @@
     }
    ],
    "source": [
-    "input_features['item_id_list']"
+    "input_features[\"item_id_list\"]"
    ]
   },
   {
@@ -1513,7 +1516,7 @@
    ],
    "source": [
     "# model loading and initialization\n",
-    "model = GRU4Rec(config, train_data.dataset).to(config['device'])\n",
+    "model = GRU4Rec(config, train_data.dataset).to(config[\"device\"])\n",
     "logger.info(model)\n",
     "\n",
     "# trainer loading and initialization\n",
@@ -1600,7 +1603,7 @@
     }
    ],
    "source": [
-    "input_features['item_id_list'].shape"
+    "input_features[\"item_id_list\"].shape"
    ]
   },
   {
@@ -1730,21 +1733,27 @@
     "import torch\n",
     "from recbole.data.interaction import Interaction\n",
     "\n",
+    "\n",
     "def add_last_item(old_interaction, last_item_id, max_len=50):\n",
-    "    new_seq_items = old_interaction['item_id_list'][-1]\n",
-    "    if old_interaction['item_length'][-1].item() < max_len:\n",
-    "        new_seq_items[input_interaction['item_length'][-1].item()] = last_item_id\n",
+    "    new_seq_items = old_interaction[\"item_id_list\"][-1]\n",
+    "    if old_interaction[\"item_length\"][-1].item() < max_len:\n",
+    "        new_seq_items[input_interaction[\"item_length\"][-1].item()] = last_item_id\n",
     "    else:\n",
     "        new_seq_items = torch.roll(new_seq_items, -1)\n",
     "        new_seq_items[-1] = last_item_id\n",
     "    return new_seq_items.view(1, len(new_seq_items))\n",
     "\n",
+    "\n",
     "test = {\n",
-    "            'item_id_list': add_last_item(input_interaction, input_interaction['item_id'][-1].item(), model.max_seq_length),\n",
-    "            'item_length': torch.tensor(\n",
-    "                [input_interaction['item_length'][-1].item() + 1\n",
-    "                 if input_interaction['item_length'][-1].item() < model.max_seq_length else model.max_seq_length])\n",
-    "        }\n",
+    "    \"item_id_list\": add_last_item(input_interaction, input_interaction[\"item_id\"][-1].item(), model.max_seq_length),\n",
+    "    \"item_length\": torch.tensor(\n",
+    "        [\n",
+    "            input_interaction[\"item_length\"][-1].item() + 1\n",
+    "            if input_interaction[\"item_length\"][-1].item() < model.max_seq_length\n",
+    "            else model.max_seq_length\n",
+    "        ]\n",
+    "    ),\n",
+    "}\n",
     "new_inter = Interaction(test)\n",
     "new_inter"
    ]
@@ -1793,7 +1802,7 @@
    },
    "outputs": [],
    "source": [
-    "new_inter = new_inter.to(config['device'])\n",
+    "new_inter = new_inter.to(config[\"device\"])\n",
     "new_scores = model.full_sort_predict(new_inter)\n",
     "new_scores = new_scores.view(-1, test_data.dataset.item_num)\n",
     "new_scores[:, 0] = -np.inf  # set scores of [pad] to -inf"
@@ -1843,15 +1852,17 @@
     "import torch\n",
     "from recbole.data.interaction import Interaction\n",
     "\n",
+    "\n",
     "def add_last_item(old_interaction, last_item_id, max_len=50):\n",
-    "    new_seq_items = old_interaction['item_id_list'][-1]\n",
-    "    item_length = old_interaction['item_length'][-1].item()\n",
+    "    new_seq_items = old_interaction[\"item_id_list\"][-1]\n",
+    "    item_length = old_interaction[\"item_length\"][-1].item()\n",
     "    if item_length < max_len:\n",
     "        new_seq_items[item_length] = last_item_id\n",
     "    else:\n",
     "        new_seq_items = torch.roll(new_seq_items, -1)\n",
     "        new_seq_items[-1] = last_item_id\n",
     "    return new_seq_items.view(1, len(new_seq_items))\n",
+    "\n",
     "\n",
     "def predict_for_all_item(external_user_id, dataset, model):\n",
     "    model.eval()\n",
@@ -1861,16 +1872,21 @@
     "\n",
     "        # instead of passing in a bool array whose shape is the same with dataset,\n",
     "        # we just filter the corresponding index to pass in, then we get great performance improvements.\n",
-    "        input_interaction = dataset[index.nonzero()] \n",
+    "        input_interaction = dataset[index.nonzero()]\n",
     "        test = {\n",
-    "            'item_id_list': add_last_item(input_interaction, \n",
-    "                                          input_interaction['item_id'][-1].item(), model.max_seq_length),\n",
-    "            'item_length': torch.tensor(\n",
-    "                [input_interaction['item_length'][-1].item() + 1\n",
-    "                 if input_interaction['item_length'][-1].item() < model.max_seq_length else model.max_seq_length])\n",
+    "            \"item_id_list\": add_last_item(\n",
+    "                input_interaction, input_interaction[\"item_id\"][-1].item(), model.max_seq_length\n",
+    "            ),\n",
+    "            \"item_length\": torch.tensor(\n",
+    "                [\n",
+    "                    input_interaction[\"item_length\"][-1].item() + 1\n",
+    "                    if input_interaction[\"item_length\"][-1].item() < model.max_seq_length\n",
+    "                    else model.max_seq_length\n",
+    "                ]\n",
+    "            ),\n",
     "        }\n",
     "        new_inter = Interaction(test)\n",
-    "        new_inter = new_inter.to(config['device'])\n",
+    "        new_inter = new_inter.to(config[\"device\"])\n",
     "        new_scores = model.full_sort_predict(new_inter)\n",
     "        new_scores = new_scores.view(-1, test_data.dataset.item_num)\n",
     "        new_scores[:, 0] = -np.inf  # set scores of [pad] to -inf\n",
@@ -1915,8 +1931,9 @@
     }
    ],
    "source": [
-    "predict_for_all_item('0109ad0b5a76924a1b58be677409bb601cc8bead9a87b8ce5b08a4a1f5bc71ef', \n",
-    "                     dataset, model) # we feed directly origin dataset, not train data or test data"
+    "predict_for_all_item(\n",
+    "    \"0109ad0b5a76924a1b58be677409bb601cc8bead9a87b8ce5b08a4a1f5bc71ef\", dataset, model\n",
+    ")  # we feed directly origin dataset, not train data or test data"
    ]
   },
   {
