--- a/run_example/tSNE embedding visualisation.ipynb
+++ b/run_example/tSNE embedding visualisation.ipynb
@@ -38,8 +38,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "checkpoint_name = 'TransE-Jan-23-2025_16-48-43.pth'"
-    "checkpoint_name = 'TransE-Jan-23-2025_16-48-43.pth'"
+    "checkpoint_name = \"TransE-Jan-23-2025_16-48-43.pth\"\n",
+    "checkpoint_name = \"TransE-Jan-23-2025_16-48-43.pth\""
    ]
   },
   {
@@ -48,12 +48,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "checkpoint = torch.load(os.path.join('saved',checkpoint_name), weights_only=False)\n",
+    "checkpoint = torch.load(os.path.join(\"saved\", checkpoint_name), weights_only=False)\n",
     "config = checkpoint[\"config\"]\n",
     "init_seed(config[\"seed\"], config[\"reproducibility\"])\n",
     "\n",
-    "for weight in checkpoint['state_dict'].keys():\n",
-    "    checkpoint['state_dict'][weight] = checkpoint['state_dict'][weight].to(torch.device('cpu')).numpy()"
+    "for weight in checkpoint[\"state_dict\"].keys():\n",
+    "    checkpoint[\"state_dict\"][weight] = checkpoint[\"state_dict\"][weight].to(torch.device(\"cpu\")).numpy()"
    ]
   },
   {
@@ -62,21 +62,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_fn(embeddings, desc='Entity'):\n",
-    "    ids= list(range(embeddings.shape[0]))\n",
+    "def plot_fn(embeddings, desc=\"Entity\"):\n",
+    "    ids = list(range(embeddings.shape[0]))\n",
     "    fig = px.scatter(\n",
     "        x=embeddings[:, 0],\n",
     "        y=embeddings[:, 1],\n",
     "        color=ids,\n",
-    "        labels={'x': 'Embedding Dimension 1',\n",
-    "                'y': 'Embedding Dimension 2',\n",
-    "                'color': f'{desc} ID'},\n",
+    "        labels={\"x\": \"Embedding Dimension 1\", \"y\": \"Embedding Dimension 2\", \"color\": f\"{desc} ID\"},\n",
     "        title=f\"{config['model']} {desc} Embeddings\",\n",
     "        width=1024,\n",
     "        height=1024,\n",
-    "        template='plotly_white',\n",
+    "        template=\"plotly_white\",\n",
     "    )\n",
-    "    \n",
+    "\n",
     "    fig.show()"
    ]
   },
@@ -103,9 +101,9 @@
     "tsne = TSNE(\n",
     "    perplexity=30,\n",
     "    n_jobs=8,\n",
-    "    initialization = \"random\",\n",
+    "    initialization=\"random\",\n",
     "    metric=\"cosine\",\n",
-    "    random_state=config['seed'],\n",
+    "    random_state=config[\"seed\"],\n",
     "    verbose=True,\n",
     ")"
    ]
@@ -123,8 +121,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "user_weights = checkpoint['state_dict']['user_embedding.weight']\n",
-    "tsne_embeddings_users = tsne.fit(user_weights)"
+    "user_weights = checkpoint[\"state_dict\"][\"user_embedding.weight\"]\n",
+    "tsne_embeddings_users = tsne.fit(user_weights)\n",
     "tsne_embeddings_users = tsne.fit(user_weights)"
    ]
   },
@@ -134,8 +132,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_fn(tsne_embeddings_users, 'User')"
-    "plot_fn(tsne_embeddings_users, 'User')"
+    "plot_fn(tsne_embeddings_users, \"User\")\n",
+    "plot_fn(tsne_embeddings_users, \"User\")"
    ]
   },
   {
@@ -151,8 +149,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "entity_weights = checkpoint['state_dict']['entity_embedding.weight']\n",
-    "tsne_embeddings_entities = tsne.fit(entity_weights)"
+    "entity_weights = checkpoint[\"state_dict\"][\"entity_embedding.weight\"]\n",
+    "tsne_embeddings_entities = tsne.fit(entity_weights)\n",
     "tsne_embeddings_entities = tsne.fit(entity_weights)"
    ]
   },
@@ -162,8 +160,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_fn(tsne_embeddings_entities, 'Entity')"
-    "plot_fn(tsne_embeddings_entities, 'Entity')"
+    "plot_fn(tsne_embeddings_entities, \"Entity\")\n",
+    "plot_fn(tsne_embeddings_entities, \"Entity\")"
    ]
   },
   {
@@ -179,7 +177,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "relation_weights = checkpoint['state_dict']['relation_embedding.weight']\n",
+    "relation_weights = checkpoint[\"state_dict\"][\"relation_embedding.weight\"]\n",
     "tsne_embeddings_relations = tsne.fit(relation_weights)"
    ]
   },
@@ -189,7 +187,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_fn(tsne_embeddings_relations, 'Relation')"
+    "plot_fn(tsne_embeddings_relations, \"Relation\")"
    ]
   },
   {
@@ -211,36 +209,33 @@
     "\n",
     "    for embeddings_name, embeddings in kwargs.items():\n",
     "        embeddings_list.append(embeddings)\n",
-    "        identifiers_list.extend([f'{embeddings_name} {id}' for id in range(embeddings.shape[0])])\n",
+    "        identifiers_list.extend([f\"{embeddings_name} {id}\" for id in range(embeddings.shape[0])])\n",
     "        print(f\"[+] {embeddings_name}: {embeddings.shape}\")\n",
     "\n",
     "    embeddings_list = np.concatenate(embeddings_list, axis=0)\n",
     "\n",
-    "    combined_df = pd.DataFrame({\n",
-    "        'x': embeddings_list[:, 0],\n",
-    "        'y': embeddings_list[:, 1],\n",
-    "        'type': [id.split(' ')[0] for id in identifiers_list],\n",
-    "        'identifier': identifiers_list\n",
-    "    })\n",
+    "    combined_df = pd.DataFrame(\n",
+    "        {\n",
+    "            \"x\": embeddings_list[:, 0],\n",
+    "            \"y\": embeddings_list[:, 1],\n",
+    "            \"type\": [id.split(\" \")[0] for id in identifiers_list],\n",
+    "            \"identifier\": identifiers_list,\n",
+    "        }\n",
+    "    )\n",
     "\n",
     "    fig = px.scatter(\n",
     "        combined_df,\n",
-    "        x='x',\n",
-    "        y='y',\n",
-    "        color='type',\n",
-    "        hover_data=['identifier'],\n",
-    "        labels={\n",
-    "            'x': 'Embedding Dimension 1',\n",
-    "            'y': 'Embedding Dimension 2',\n",
-    "            'type': 'Embedding Type'\n",
-    "\n",
-    "        },\n",
+    "        x=\"x\",\n",
+    "        y=\"y\",\n",
+    "        color=\"type\",\n",
+    "        hover_data=[\"identifier\"],\n",
+    "        labels={\"x\": \"Embedding Dimension 1\", \"y\": \"Embedding Dimension 2\", \"type\": \"Embedding Type\"},\n",
     "        title=f\"Visualising Combined Embeddings {checkpoint_name}\",\n",
     "        width=1024,\n",
     "        height=1024,\n",
-    "        template='plotly_white'\n",
+    "        template=\"plotly_white\",\n",
     "    )\n",
-    "    fig.show()\n"
+    "    fig.show()"
    ]
   },
   {
@@ -249,17 +244,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "combine_embeddings(user=tsne_embeddings_users,\n",
-    "                   entity=tsne_embeddings_entities, \n",
-    "                   relation=tsne_embeddings_relations)"
+    "combine_embeddings(user=tsne_embeddings_users, entity=tsne_embeddings_entities, relation=tsne_embeddings_relations)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
