--- a/run_example/sequential-model-fixed-missing-last-item.ipynb
+++ b/run_example/sequential-model-fixed-missing-last-item.ipynb
@@ -282,8 +282,10 @@
    "source": [
     "import pandas as pd\n",
     "import gc\n",
-    "df = pd.read_csv(r\"/kaggle/input/h-and-m-personalized-fashion-recommendations/transactions_train.csv\", \n",
-    "                 dtype={'article_id': 'str'})\n",
+    "\n",
+    "df = pd.read_csv(\n",
+    "    r\"/kaggle/input/h-and-m-personalized-fashion-recommendations/transactions_train.csv\", dtype={\"article_id\": \"str\"}\n",
+    ")\n",
     "df.head()"
    ]
   },
@@ -467,7 +469,7 @@
     }
    ],
    "source": [
-    "df['t_dat'] = pd.to_datetime(df['t_dat'], format=\"%Y-%m-%d\")\n",
+    "df[\"t_dat\"] = pd.to_datetime(df[\"t_dat\"], format=\"%Y-%m-%d\")\n",
     "df"
    ]
   },
@@ -595,7 +597,8 @@
    ],
    "source": [
     "import numpy as np\n",
-    "df['timestamp'] = df.t_dat.values.astype(np.int64) // 10 ** 9\n",
+    "\n",
+    "df[\"timestamp\"] = df.t_dat.values.astype(np.int64) // 10**9\n",
     "df.head()"
    ]
   },
@@ -775,8 +778,9 @@
     }
    ],
    "source": [
-    "temp = df[df['timestamp'] > 1585620000][['customer_id', 'article_id', 'timestamp']].rename(\n",
-    "    columns={'customer_id': 'user_id:token', 'article_id': 'item_id:token', 'timestamp': 'timestamp:float'})\n",
+    "temp = df[df[\"timestamp\"] > 1585620000][[\"customer_id\", \"article_id\", \"timestamp\"]].rename(\n",
+    "    columns={\"customer_id\": \"user_id:token\", \"article_id\": \"item_id:token\", \"timestamp\": \"timestamp:float\"}\n",
+    ")\n",
     "temp"
    ]
   },
@@ -832,7 +836,7 @@
    ],
    "source": [
     "!mkdir /kaggle/working/recbox_data\n",
-    "temp.to_csv('/kaggle/working/recbox_data/recbox_data.inter', index=False, sep='\\t')\n",
+    "temp.to_csv(\"/kaggle/working/recbox_data/recbox_data.inter\", index=False, sep=\"\\t\")\n",
     "del temp\n",
     "gc.collect()"
    ]
@@ -917,9 +921,21 @@
     }
    ],
    "source": [
-    "sub0 = pd.read_csv('../input/hm-pre-recommendation/submissio_byfone_chris.csv').sort_values('customer_id').reset_index(drop=True)\n",
-    "sub1 = pd.read_csv('../input/hm-pre-recommendation/submission_trending.csv').sort_values('customer_id').reset_index(drop=True)\n",
-    "sub2 = pd.read_csv('../input/hm-pre-recommendation/submission_exponential_decay.csv').sort_values('customer_id').reset_index(drop=True)\n",
+    "sub0 = (\n",
+    "    pd.read_csv(\"../input/hm-pre-recommendation/submissio_byfone_chris.csv\")\n",
+    "    .sort_values(\"customer_id\")\n",
+    "    .reset_index(drop=True)\n",
+    ")\n",
+    "sub1 = (\n",
+    "    pd.read_csv(\"../input/hm-pre-recommendation/submission_trending.csv\")\n",
+    "    .sort_values(\"customer_id\")\n",
+    "    .reset_index(drop=True)\n",
+    ")\n",
+    "sub2 = (\n",
+    "    pd.read_csv(\"../input/hm-pre-recommendation/submission_exponential_decay.csv\")\n",
+    "    .sort_values(\"customer_id\")\n",
+    "    .reset_index(drop=True)\n",
+    ")\n",
     "\n",
     "sub0.shape, sub1.shape, sub2.shape"
    ]
@@ -1049,9 +1065,9 @@
     }
    ],
    "source": [
-    "sub0.columns = ['customer_id', 'prediction0']\n",
-    "sub0['prediction1'] = sub1['prediction']\n",
-    "sub0['prediction2'] = sub2['prediction']\n",
+    "sub0.columns = [\"customer_id\", \"prediction0\"]\n",
+    "sub0[\"prediction1\"] = sub1[\"prediction\"]\n",
+    "sub0[\"prediction2\"] = sub2[\"prediction\"]\n",
     "del sub1, sub2\n",
     "gc.collect()\n",
     "sub0.head()"
@@ -1195,33 +1211,34 @@
     }
    ],
    "source": [
-    "def cust_blend(dt, W = [1,1,1]):\n",
-    "    #Global ensemble weights\n",
-    "    #W = [1.15,0.95,0.85]\n",
-    "    \n",
-    "    #Create a list of all model predictions\n",
+    "def cust_blend(dt, W=[1, 1, 1]):\n",
+    "    # Global ensemble weights\n",
+    "    # W = [1.15,0.95,0.85]\n",
+    "\n",
+    "    # Create a list of all model predictions\n",
     "    REC = []\n",
-    "    REC.append(dt['prediction0'].split())\n",
-    "    REC.append(dt['prediction1'].split())\n",
-    "    REC.append(dt['prediction2'].split())\n",
-    "    \n",
-    "    #Create a dictionary of items recommended. \n",
-    "    #Assign a weight according the order of appearance and multiply by global weights\n",
+    "    REC.append(dt[\"prediction0\"].split())\n",
+    "    REC.append(dt[\"prediction1\"].split())\n",
+    "    REC.append(dt[\"prediction2\"].split())\n",
+    "\n",
+    "    # Create a dictionary of items recommended.\n",
+    "    # Assign a weight according the order of appearance and multiply by global weights\n",
     "    res = {}\n",
     "    for M in range(len(REC)):\n",
     "        for n, v in enumerate(REC[M]):\n",
     "            if v in res:\n",
-    "                res[v] += (W[M]/(n+1))\n",
+    "                res[v] += W[M] / (n + 1)\n",
     "            else:\n",
-    "                res[v] = (W[M]/(n+1))\n",
-    "    \n",
+    "                res[v] = W[M] / (n + 1)\n",
+    "\n",
     "    # Sort dictionary by item weights\n",
     "    res = list(dict(sorted(res.items(), key=lambda item: -item[1])).keys())\n",
-    "    \n",
-    "    # Return the top 12 itens only\n",
-    "    return ' '.join(res[:12])\n",
     "\n",
-    "sub0['prediction'] = sub0.apply(cust_blend, W = [1.05,1.00,0.95], axis=1)\n",
+    "    # Return the top 12 itens only\n",
+    "    return \" \".join(res[:12])\n",
+    "\n",
+    "\n",
+    "sub0[\"prediction\"] = sub0.apply(cust_blend, W=[1.05, 1.00, 0.95], axis=1)\n",
     "sub0.head()"
    ]
   },
@@ -1248,11 +1265,11 @@
    },
    "outputs": [],
    "source": [
-    "del sub0['prediction0']\n",
-    "del sub0['prediction1']\n",
-    "del sub0['prediction2']\n",
+    "del sub0[\"prediction0\"]\n",
+    "del sub0[\"prediction1\"]\n",
+    "del sub0[\"prediction2\"]\n",
     "gc.collect()\n",
-    "sub0.to_csv(f'submission.csv', index=False)"
+    "sub0.to_csv(f\"submission.csv\", index=False)"
    ]
   },
   {
@@ -1467,26 +1484,22 @@
    ],
    "source": [
     "parameter_dict = {\n",
-    "    'data_path': '/kaggle/working',\n",
-    "    'USER_ID_FIELD': 'user_id',\n",
-    "    'ITEM_ID_FIELD': 'item_id',\n",
-    "    'TIME_FIELD': 'timestamp',\n",
-    "    'user_inter_num_interval': \"[30,inf)\",\n",
-    "    'item_inter_num_interval': \"[40,inf)\",\n",
-    "    'load_col': {'inter': ['user_id', 'item_id', 'timestamp']},\n",
-    "    'neg_sampling': None,\n",
-    "    'epochs': 50,\n",
-    "    'eval_args': {\n",
-    "        'split': {'RS': [10, 0, 0]},\n",
-    "        'group_by': 'user',\n",
-    "        'order': 'TO',\n",
-    "        'mode': 'full'}\n",
+    "    \"data_path\": \"/kaggle/working\",\n",
+    "    \"USER_ID_FIELD\": \"user_id\",\n",
+    "    \"ITEM_ID_FIELD\": \"item_id\",\n",
+    "    \"TIME_FIELD\": \"timestamp\",\n",
+    "    \"user_inter_num_interval\": \"[30,inf)\",\n",
+    "    \"item_inter_num_interval\": \"[40,inf)\",\n",
+    "    \"load_col\": {\"inter\": [\"user_id\", \"item_id\", \"timestamp\"]},\n",
+    "    \"neg_sampling\": None,\n",
+    "    \"epochs\": 50,\n",
+    "    \"eval_args\": {\"split\": {\"RS\": [10, 0, 0]}, \"group_by\": \"user\", \"order\": \"TO\", \"mode\": \"full\"},\n",
     "}\n",
     "\n",
-    "config = Config(model='GRU4Rec', dataset='recbox_data', config_dict=parameter_dict)\n",
+    "config = Config(model=\"GRU4Rec\", dataset=\"recbox_data\", config_dict=parameter_dict)\n",
     "\n",
     "# init random seed\n",
-    "init_seed(config['seed'], config['reproducibility'])\n",
+    "init_seed(config[\"seed\"], config[\"reproducibility\"])\n",
     "\n",
     "# logger initialization\n",
     "init_logger(config)\n",
@@ -1718,7 +1731,7 @@
    ],
    "source": [
     "# model loading and initialization\n",
-    "model = GRU4Rec(config, train_data.dataset).to(config['device'])\n",
+    "model = GRU4Rec(config, train_data.dataset).to(config[\"device\"])\n",
     "logger.info(model)\n",
     "\n",
     "# trainer loading and initialization\n",
@@ -1770,8 +1783,9 @@
    },
    "outputs": [],
    "source": [
-    "external_user_ids = dataset.id2token(\n",
-    "    dataset.uid_field, list(range(dataset.user_num)))[1:]#fist element in array is 'PAD'(default of Recbole) ->remove it "
+    "external_user_ids = dataset.id2token(dataset.uid_field, list(range(dataset.user_num)))[\n",
+    "    1:\n",
+    "]  # fist element in array is 'PAD'(default of Recbole) ->remove it"
    ]
   },
   {
@@ -1800,14 +1814,16 @@
     "import torch\n",
     "from recbole.data.interaction import Interaction\n",
     "\n",
+    "\n",
     "def add_last_item(old_interaction, last_item_id, max_len=50):\n",
-    "    new_seq_items = old_interaction['item_id_list'][-1]\n",
-    "    if old_interaction['item_length'][-1].item() < max_len:\n",
-    "        new_seq_items[old_interaction['item_length'][-1].item()] = last_item_id\n",
+    "    new_seq_items = old_interaction[\"item_id_list\"][-1]\n",
+    "    if old_interaction[\"item_length\"][-1].item() < max_len:\n",
+    "        new_seq_items[old_interaction[\"item_length\"][-1].item()] = last_item_id\n",
     "    else:\n",
     "        new_seq_items = torch.roll(new_seq_items, -1)\n",
     "        new_seq_items[-1] = last_item_id\n",
     "    return new_seq_items.view(1, len(new_seq_items))\n",
+    "\n",
     "\n",
     "def predict_for_all_item(external_user_id, dataset, model):\n",
     "    model.eval()\n",
@@ -1816,14 +1832,19 @@
     "        index = np.isin(dataset[dataset.uid_field].numpy(), uid_series)\n",
     "        input_interaction = dataset[index]\n",
     "        test = {\n",
-    "            'item_id_list': add_last_item(input_interaction, \n",
-    "                                          input_interaction['item_id'][-1].item(), model.max_seq_length),\n",
-    "            'item_length': torch.tensor(\n",
-    "                [input_interaction['item_length'][-1].item() + 1\n",
-    "                 if input_interaction['item_length'][-1].item() < model.max_seq_length else model.max_seq_length])\n",
+    "            \"item_id_list\": add_last_item(\n",
+    "                input_interaction, input_interaction[\"item_id\"][-1].item(), model.max_seq_length\n",
+    "            ),\n",
+    "            \"item_length\": torch.tensor(\n",
+    "                [\n",
+    "                    input_interaction[\"item_length\"][-1].item() + 1\n",
+    "                    if input_interaction[\"item_length\"][-1].item() < model.max_seq_length\n",
+    "                    else model.max_seq_length\n",
+    "                ]\n",
+    "            ),\n",
     "        }\n",
     "        new_inter = Interaction(test)\n",
-    "        new_inter = new_inter.to(config['device'])\n",
+    "        new_inter = new_inter.to(config[\"device\"])\n",
     "        new_scores = model.full_sort_predict(new_inter)\n",
     "        new_scores = new_scores.view(-1, test_data.dataset.item_num)\n",
     "        new_scores[:, 0] = -np.inf  # set scores of [pad] to -inf\n",
@@ -1868,8 +1889,7 @@
     }
    ],
    "source": [
-    "predict_for_all_item('0109ad0b5a76924a1b58be677409bb601cc8bead9a87b8ce5b08a4a1f5bc71ef', \n",
-    "                     dataset, model)"
+    "predict_for_all_item(\"0109ad0b5a76924a1b58be677409bb601cc8bead9a87b8ce5b08a4a1f5bc71ef\", dataset, model)"
    ]
   },
   {
@@ -2011,9 +2031,9 @@
     }
    ],
    "source": [
-    "external_item_str = [' '.join(x) for x in topk_items]\n",
-    "result = pd.DataFrame(external_user_ids, columns=['customer_id'])\n",
-    "result['prediction'] = external_item_str\n",
+    "external_item_str = [\" \".join(x) for x in topk_items]\n",
+    "result = pd.DataFrame(external_user_ids, columns=[\"customer_id\"])\n",
+    "result[\"prediction\"] = external_item_str\n",
     "result.head()"
    ]
   },
@@ -2152,7 +2172,7 @@
     }
    ],
    "source": [
-    "submit_df = pd.read_csv('submission.csv')\n",
+    "submit_df = pd.read_csv(\"submission.csv\")\n",
     "submit_df.shape"
    ]
   },
@@ -2363,7 +2383,7 @@
     }
    ],
    "source": [
-    "submit_df = pd.merge(submit_df, result, on='customer_id', how='outer')\n",
+    "submit_df = pd.merge(submit_df, result, on=\"customer_id\", how=\"outer\")\n",
     "submit_df.head()"
    ]
   },
@@ -2486,8 +2506,9 @@
    ],
    "source": [
     "submit_df = submit_df.fillna(-1)\n",
-    "submit_df['prediction'] = submit_df.apply(\n",
-    "    lambda x: x['prediction_y'] if x['prediction_y'] != -1 else x['prediction_x'], axis=1)\n",
+    "submit_df[\"prediction\"] = submit_df.apply(\n",
+    "    lambda x: x[\"prediction_y\"] if x[\"prediction_y\"] != -1 else x[\"prediction_x\"], axis=1\n",
+    ")\n",
     "submit_df.head()"
    ]
   },
@@ -2685,7 +2706,7 @@
     }
    ],
    "source": [
-    "submit_df[submit_df['prediction_y'] != -1]"
+    "submit_df[submit_df[\"prediction_y\"] != -1]"
    ]
   },
   {
@@ -2787,7 +2808,7 @@
     }
    ],
    "source": [
-    "submit_df = submit_df.drop(columns=['prediction_y', 'prediction_x'])\n",
+    "submit_df = submit_df.drop(columns=[\"prediction_y\", \"prediction_x\"])\n",
     "submit_df.head()"
    ]
   },
@@ -2814,7 +2835,7 @@
    },
    "outputs": [],
    "source": [
-    "submit_df.to_csv('submission.csv', index=False)"
+    "submit_df.to_csv(\"submission.csv\", index=False)"
    ]
   },
   {
